--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Erica Stewart: My Interest</title>
   </head>
-  <body></body>
+  <body>
+    <header>My Interest & Hobbies</header>
+  </body>
 </html>
