--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>
       The most enjoyabale way to get out in nature and find osme semblance of
       peace. Fishing has recently become my favorite and only recreational
-      hobby. I even invested in a go pro to do vlogs. Im by no means good at it.
+      hobby. I even invested in a go pro to do vlogs. <p>Im by no means good at it.
       In fact, it is one of the few hobbies i have and i don't do it for
-      personal glory. But enjoy the glory in natures beauty. Sitting bankside
+      personal glory. But enjoy the glory in natures beauty. </p><p>>Sitting bankside
       with great friends and having a beer while waiting for bite. Talking about
-      all the things we've done,knowing each moment is precious.
+      all the things we've done,knowing each moment is precious.</p>
     </p>
   </body>
 </html>
