--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Erica Stewart: My Interest</title>
   </head>
   <body>
-    <header>My Interest & Hobbies</header>
+    <h1>My Interest & Hobbies</header>
     <h2>Fishing</h2>
     <p>
       The most enjoyabale way to get out in nature and find osme semblance of
