--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>My Interest & Hobbies</header>
     <h2>Fishing</h2>
     <p>
-      The most enjoyabale way to get out in nature and find osme semblance of
-      peace. Fishing has recently become my favorite and only recreational
-      hobby. I even invested in a go pro to do vlogs.</p><p>Im by no means good at it.
+      Fishing has recently become my favorite and only recreational
+      hobby. It is the  <strong>most</strong> enjoyabale way for me to get out in nature and find some semblance of
+      peace int he world.  I even invested in a go pro to do vlogs.</p><p>Im by no means good at it.
       In fact, it is one of the few hobbies i have and i don't do it for
       personal glory. But enjoy the glory in natures beauty. </p>
       <p>Sitting bankside
@@ -29,6 +29,11 @@
       Maybe it was the first time I had to practice to get better. It wasnt instant gratification. But what I learned is too appreciate growth.</p>
       <p>Feeling like it was the only thing at the time I was passionate about enough to earn my Bachelors, I attended college. There i developed athirst for knowledge on all aspects of music creation.</p>
       <p>I learned how to maniuplate sound for foley and game design. Music composition was something personal though. This is when I learned how to express myself artisticly. It was therapy as well. It brought me joy.</p>
-      
+      <h4 style="text-align:center"><em>One of my first songs<em></h4>
+
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/82095374&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/fringemusic" title="Fringe Music™" target="_blank" style="color: #cccccc; text-decoration: none;">Fringe Music™</a> · <a href="https://soundcloud.com/fringemusic/ready-when-you-are-snares" title="Ready when you are" target="_blank" style="color: #cccccc; text-decoration: none;">Ready when you are</a></div>
+<hr>
+      <h2>Gaming</h2>
+      It started with computer games in the 80s before I got my first console, an Atari. My favorite games were Chopper city, and Pacman. <img src="atarigames.jpg" alt="OldSchool Atari Games" class="atari">
   </body>
 </html>
