--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <ul>
         <li><a href="#fishing">Fishing</a></li>
         <br />
-        <li>Music</li>
+        <li><a href="#music">Music</a></li>
         <br />
-        <li>Gaming</li>
+        <li><a href="#gaming">Gaming</a></li>
         <br />
       </ul>
       <br />
@@ -44,7 +44,9 @@
         class="fishpic"
       />
       <hr />
+      <br /><br /><br /><br />
     </section>
+    <br />
 
     <section id="music">
       <img
@@ -111,8 +113,10 @@
         >
       </div>
     </section>
+    <br />
     <hr />
-    <section id="Gaming">
+    <br /><br /><br /><br />
+    <section id="gaming">
       <h2>Gaming</h2>
       <p>
         It started with computer games in the 80s before I got my first console,
@@ -154,6 +158,20 @@
         />
       </p>
     </section>
-    <br /><br /><br /><br />
+
+    <br /><br /><br /><br /><br />
+    <div class="btmnav">
+      <h2>Page Navigation</h2>
+      <nav class="nav2">
+        <ol>
+          <li><a href="#fishing">Fishing</a></li>
+          <br />
+          <li><a href="#music">Music</a></li>
+          <br />
+          <li><a href="#gaming">Gaming</a></li>
+          <br />
+        </ol>
+      </nav>
+    </div>
   </body>
 </html>
