--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheet.css" />
-    <title>Erica Stewart: My Interest</title>
+
+    <title>Erica Stewart: Things I &#129505;</title>
   </head>
   <body>
-    <h1>My Interest & Hobbies</h1>
+    <header>
+      <h1>&#129505;My Interest & Hobbies&#129505;</header></body></h1>
+  </header>
+  
     <br /><br />
     <nav class="nav">
       <ul>
@@ -38,11 +42,8 @@
         waiting for a bite..
       </p>
 
-      <img
-        src="pexels-tomasz-filipek-1630039.jpg"
-        alt="Two buddies fishing"
-        class="fishpic"
-      />
+      <img src="pexels-tomasz-filipek-1630039.jpg" />
+      alt="Two buddies fishing" class="fishpic" />
       <hr />
       <br /><br /><br /><br />
     </section>
@@ -173,5 +174,7 @@
         </ol>
       </nav>
     </div>
+    <br /><br /><br /><br />
+    <footer>Created By: Erica Stewart</footer>
   </body>
 </html>
