--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <title>Erica Stewart: Things I &#129505;</title>
   </head>
   <body>
-    <header>
-      <h1>&#129505;My Interest & Hobbies&#129505;</header></body></h1>
-  </header>
-  
+    <h1>&#129505;My Interest & Hobbies&#129505;</h1>
     <br /><br />
     <nav class="nav">
       <ul>
@@ -42,8 +39,11 @@
         waiting for a bite..
       </p>
 
-      <img src="pexels-tomasz-filipek-1630039.jpg" />
-      alt="Two buddies fishing" class="fishpic" />
+      <img
+        src="pexels-tomasz-filipek-1630039.jpg"
+        alt="Two buddies fishing"
+        class="fishpic"
+      />
       <hr />
       <br /><br /><br /><br />
     </section>
