--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
         Fishing has recently become my favorite and only recreational hobby. It
         is the <strong>most</strong> enjoyabale way for me to get out in nature
         and find some semblance of peace in the world. I even invested in a
-        GoPro to do vlogs.
+        GoPro to do vlogs. I am a frequent shopper at
+        <a href="https://www.basspro.com/shop/en#">Bass Pro Shop</a> and
+        <a href="https://www.academy.com/">Academy Sports</a>
+        <img src="/shorefishing.jpg" alt="Shore Fishing" />
       </p>
       <p>
-        Im by no means good at it. In fact, it is one of the few hobbies i have
-        and i don't do it for personal glory. But enjoy the glory in natures
-        beauty. Sitting bankside with great friends and having a beer while
-        waiting for a bite..
+        Im by no means good at fishing. In fact, it is one of the few hobbies i
+        have and i don't do it for personal glory. But enjoy the glory in
+        natures beauty. Sitting bankside with great friends and having a beer
+        while waiting for a bite..
       </p>
 
       <img
@@ -57,6 +60,7 @@
         class="jazzPic"
       />
       <h2>Music Production</h2>
+
       <p>
         My interest in making music started at a young age while i took piano
         lessons. Initially, I was against learning how to play. Maybe it was
@@ -157,11 +161,13 @@
           alt="Guy playing on thier Occulus"
           class="occulus"
         />
+        /> />
       </p>
     </section>
 
     <br /><br /><br /><br /><br />
     <div class="btmnav">
+      <form></form>
       <h2>Page Navigation</h2>
       <nav class="nav2">
         <ol>
@@ -174,6 +180,32 @@
         </ol>
       </nav>
     </div>
+    <form>
+      <label for="fname">Email Address:</label><br />
+      <input
+        type="text"
+        id="fname"
+        name="fname"
+        placeholder="Email Address"
+      /><br />
+      <label for="lname">Name:</label><br />
+      <input type="text" id="lname" name="lname" placeholder="Name" />
+
+      <h3>What would you like to say to ME?</h3>
+
+      <textarea name="Thoughts" id="Thoughts" cols="50" rows="10">
+Share your thoughts
+     
+      </textarea>
+
+      <input
+        type="button"
+        name="button"
+        value="Imma tell you what I think....here ya go!"
+        alt="Submit"
+      />
+    </form>
+
     <br /><br /><br /><br />
     <footer>Created By: Erica Stewart</footer>
   </body>
