--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         GoPro to do vlogs. I am a frequent shopper at
         <a href="https://www.basspro.com/shop/en#">Bass Pro Shop</a> and
         <a href="https://www.academy.com/">Academy Sports</a>
-        <img src="/shorefishing.jpg" alt="Shore Fishing" />
+        <img src="/shorefishing.jpg" alt="Shore Fishing" class="shorefish" />
       </p>
       <p>
         Im by no means good at fishing. In fact, it is one of the few hobbies i
