--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         and find some semblance of peace in the world. I even invested in a
         GoPro to do vlogs. I am a frequent shopper at
         <a href="https://www.basspro.com/shop/en#">Bass Pro Shop</a> and
-        <a href="https://www.academy.com/">Academy Sports</a>
+        <a href="https://www.academy.com/">Academy Sports</a><br />
         <img src="/shorefishing.jpg" alt="Shore Fishing" class="shorefish" />
       </p>
       <p>
