--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
       </p>
       <p>
         Feeling like it was the only thing at the time I was passionate about
-        enough to earn my Bachelors, I attended college. There i developed a
-        thirst for knowledge on all aspects of music creation.
+        enough to earn my Bachelors, I attended college at
+        <a href="https://www.fullsail.edu/">Full Sail University</a>. There i
+        developed a thirst for knowledge on all aspects of music creation.
       </p>
       <p>
         I learned how to maniuplate sound for foley and game design. Music
@@ -154,14 +155,27 @@
         playing the first COD and thinking how awesome it was to play with
         people around the world. First person shooters had a great run and still
         play from time to time. Now I spend most my gaming time playing Ark
-        Survivial on my Playsation. I aslo enjoy my Occulus from time to time.
+        Survivial on my Playsation.
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/5fIAPcVdZO8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+          class="ark"
+        ></iframe
+        ><br />
+        I aslo enjoy my Occulus from time to time. I mainly get on to play
+        poker, vrchat and karaoke.
         <br />
         <img
           src="/Occulus.jpg"
           alt="Guy playing on thier Occulus"
           class="occulus"
         />
-        /> />
+        <br /><br /><br />
       </p>
     </section>
 
@@ -193,17 +207,9 @@
 
       <h3>What would you like to say to ME?</h3>
 
-      <textarea name="Thoughts" id="Thoughts" cols="50" rows="10">
-Share your thoughts
-     
-      </textarea>
+      <textarea name="Thoughts" id="Thoughts" cols="50" rows="10"> </textarea>
 
-      <input
-        type="button"
-        name="button"
-        value="Imma tell you what I think....here ya go!"
-        alt="Submit"
-      />
+      <input type="button" name="button" value="Submit" alt="Submit" />
     </form>
 
     <br /><br /><br /><br />
